--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,6 +10,7 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
+      <a href="#" class="lineUp">line up dancers</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
     <script src="src/init.js"></script>
   </body>
