Add new dancer class

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,12 +6,17 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/crazyCarrey.js"></script>
+    <script src="src/dancingSpiderMan.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="lineUp">line up dancers</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addCrazyCarrey" data-dancer-maker-function-name="makeCrazyCarrey">add Crazy Carrey</a>
+      <a href="#" class="addDancingSpiderMan" data-dancer-maker-function-name="makeDancingSpiderMan">add dancing Spiderman</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
