Finish Dancer Sprint

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,8 +15,12 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/crazyCarreySpec.js"></script>
+  <script src="spec/dancingSpiderManSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/crazyCarrey.js"></script>
+  <script src="src/dancingSpiderMan.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
